[Gab] Correction du bug de rotation qui relançait l'application et changé de question + ajout d'un compteur de question sur l'interface graphique + ajout de ligne dans les questiosn réponses du fileloader

--- a/ExamPreparation/app/src/main/res/values/strings.xml
+++ b/ExamPreparation/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btnTrue">Juste</string>
     <string name="btnFalse">Faux</string>
     <string name="btnShow">Montrer</string>
+    <string name="txtSlashNote">/</string>
 
     <string name="noMoreQuestions">Il n\'y a plus de questions pour vous.</string>
     <string name="noMoreAnswers">Vous avez tout trouvé.</string>
@@ -13,6 +14,7 @@
     <string name="btnReset">Repartir de 0</string>
     <string name="btnReload">Recharger les questions</string>
     <string name="errorLoadingFile">Pas pu ouvrir le fichier de questions, lu 0 question</string>
+    <string name="errorRetreivingState">Pas pu reloader la question d\'avant fermeture</string>
     <string name="loadFile">Fichier de question chargé</string>
     <string name="resetQuestions">Nombre de réponses justes remit à 0</string>
     <string name="continuingLastTry">Bonne continuation</string>
